--- a/style.css
+++ b/style.css
@@ -40,10 +40,13 @@ button {
     cursor: pointer;
 }
 .quadrado {
-    border: solid 3px pink;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter:blur(3px);
+    -webkit-backdrop-filter: blur(1px);
     height: 70%;
     width: 50%;
     margin-left: 25rem;
+    border-radius: 10px;
 }
 
 #result {
