--- a/style.css
+++ b/style.css
@@ -5,20 +5,19 @@ body {
     background-size: cover;
     height: 50rem;
     width: 100%;
-    color: white;
     padding-top: 5rem;
 }
 h1, p {
     padding: 1rem;
-    font-size: 1rem;
-    
+    font-size: 1rem;   
 }
+
 span {
     text-align: center;
 }
 .div1 {
-    display: flex;
     padding: 2rem;
+    justify-content: center;
 }
 .div1 label {
     padding: 0 2rem 0 0.5rem;
@@ -26,6 +25,12 @@ span {
 
 #nome {
     height: 2rem;
+    background: none;
+    color: white;
+    border-color: white;
+}
+::placeholder {
+    color: rgba(255, 255, 255, 0.624);
 }
 input {
     margin-top: 0.5rem;
@@ -43,12 +48,32 @@ button {
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter:blur(3px);
     -webkit-backdrop-filter: blur(1px);
-    height: 70%;
-    width: 50%;
-    margin-left: 25rem;
     border-radius: 10px;
+}
+.container {
+    text-align: center;
+    color: white;
 }
 
 #result {
     font-size: 2rem;
+}
+
+.option {
+    min-width: 18rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media(max-width: 500px) {
+    #result {
+        font-size: 1.2rem;
+        margin-top: 2rem;
+    }
+    body {
+        height: 60rem;
+    }
+    .quadrado {
+        margin-top: 70px !important;
+    }
 }
